# mems

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: PROJECT_REVIEW_20260323.md  TECHNICAL.md  TECHNICAL_en.md  VIBE_CODING.md  VIBE_CODING_en.md  package-lock.json  package.json
docs/src/: index.md  quick-start.md
docs/src/.vitepress/: config.ts
docs/src/api/: status.md  write.md
docs/src/development/: contributing.md
docs/src/en/: index.md
docs/src/en/api/: context.md  health.md  query.md
docs/src/en/integration/: identity-model.md
docs/src/en/introduction/: architecture.md
docs/src/en/quality/: benchmarks.md
docs/src/integration/: overview.md
docs/src/introduction/: design-philosophy.md  what-is-mems.md
docs/src/zh/: index.md  quick-start.md
docs/src/zh/api/: context.md  health.md  query.md  status.md  write.md
docs/src/zh/development/: contributing.md
docs/src/zh/integration/: identity-model.md  overview.md
scripts/: init_db.py  reader.py  reset_dev_state.py
src/mems/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py
src/mems/routers/: __init__.py  archive.py  distill.py  ingest.py  l0.py  memories.py  monitor.py  search.py  simulator.py
src/mems/schemas/: __init__.py
src/mems/services/: archive.py  distill.py  embedding.py  jsonl_utils.py  l0_sync.py  llm_client.py  redis_service.py  scheduler.py  vector_service.py
src/mems/static/: simulator_playground.html
tests/: conftest.py  test_end_to_end.py
(+4 files in other folders)
