[project]
name = "mems"
version = "0.1.0"
description = "Mems 分层记忆系统 - 四层记忆架构"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.21",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "apscheduler>=3.11.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"